# zentinel

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.claude/rules/: rust-standards.md  workflow.md
.github/workflows/: _build.yml  _docker.yml  release.yml
agents/ai-auditor/: Cargo.toml  build.rs
agents/ai-auditor/proto/: auditor.proto
agents/ai-auditor/src/: main.rs
agents/data-masking/: Cargo.toml
agents/echo/: Cargo.toml
config/examples/: README.md  acme-p384.kdl  acme-san.kdl
conformance/reports/: standard-v0.6.1-default-report.yaml
crates/agent-protocol/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: defaults.rs  filters.rs  lib.rs  routes.rs  server.rs  validation.rs
crates/config/src/kdl/: mod.rs  namespace.rs  routes.rs  server.rs
crates/config/src/multi_file/: parsers.rs
crates/config/src/validate/: certs.rs  lint.rs
crates/gateway/src/: config_writer.rs  error.rs  translator.rs
crates/gateway/src/reconcilers/: gateway.rs  gateway_class.rs  httproute.rs  reference_grant.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs  metrics.rs  routing.rs  tls.rs
crates/proxy/src/acme/: client.rs  scheduler.rs
crates/proxy/tests/: acme_startup_test.rs  tls_sni_test.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: error.rs  host.rs
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
standalone-ai-auditor/: Dockerfile  README.md
(+9 files in other folders)
