[package]
name = "zentinel-agent-ai-auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ort = { version = "1.16", features = ["download-binaries"] }
tonic = "0.10"
prost = "0.12"
bytes = "1.0"
http = "0.2"

[build-dependencies]
tonic-build = "0.10"
